# QUBO-based-track-reconstruction

./: .gitignore  MANIFEST.in  README.md  setup.cfg
scripts/: 1_make_datasets.py  2_build_QUBO.py  3a_solve_neal.py  3b_solve_openjijs.py  4_plot.py
src/hepqpr/qallse/: _backend.py  data_structures.py  data_wrapper.py  qallse.py  qallse_base.py  qallse_mp.py  utils.py
src/hepqpr/qallse/fast/: data_structures.py  data_wrapper.py  qallse.py  qallse_base.py  qallse_mp.py  utils.py
src/hepqpr/qallse/reference/: data_structures.py  data_wrapper.py  qallse_base.py  utils.py
src/hepqpr/qallse/seeding/: storage.py  utils.py
