[metadata]
name = hepqpr-qallse-py312
version = 0.1.0
description = HEPQPR.Qallse (Python 3.12 compatible fork)
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Jakob JeriÄ
url = https://github.com/JakobJeric1/QUBO-based_track_reconstruction
project_urls =
    Source = https://github.com/JakobJeric1/QUBO-based_track_reconstruction
    Issues = https://github.com/JakobJeric1/QUBO-based_track_reconstruction/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    numba
    tqdm
    click
    matplotlib
    dwave-neal
    openjij
    trackml @ git+https://github.com/acts-project/pytrackml.git


[options.packages.find]
where = src